--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "cheerio": "^1.0.0-rc.2",
     "cron": "^1.3.0",
     "dotenv": "^6.0.0",
-    "nodemailer": "^4.6.7"
+    "nodemailer": "^4.6.7",
+    "telegraf": "^3.24.1"
   },
   "devDependencies": {},
   "scripts": {
